ST-1364: Fixed pmdMain issues