@@ -16,7 +16,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
@@ -39,8 +38,8 @@ public class LocationService {
 
     public DynamicList getHearingVenuesByRegion(String regionId) {
         final HearingVenue[] hearingVenues = getCourtVenues(regionId);
-        HearingVenue[] filteredHearingVenues = hearingVenues == null ? null : Arrays.stream(hearingVenues)
-            .filter(v -> COURT_TYPE_ID.equals(v.getCourtTypeId())).toArray(HearingVenue[]::new);
+        HearingVenue[] filteredHearingVenues = Arrays.stream(hearingVenues)
+                    .filter(v -> COURT_TYPE_ID.equals(v.getCourtTypeId())).toArray(HearingVenue[]::new);
         return populateVenueDynamicList(filteredHearingVenues);
     }
 
@@ -57,19 +56,15 @@ public class LocationService {
                 httpServletRequest.getHeader(AUTHORIZATION),
                 REGION_ALL);
             if (CollectionUtils.isEmpty(list)) {
-                return null;
+                return new Region[0];
             }
-            Region[] regions = new Region[list.size()];
-            for (int i = 0; i < list.size(); i++) {
-                regions[i] = list.get(i);
-            }
-            return regions;
+            return list.toArray(new Region[0]);
         } catch (FeignException exception) {
             log.error("Unable to get Region data from reference data with exception {}",
                 exception.getMessage());
         }
 
-        return null;
+        return new Region[0];
     }
 
     private HearingVenue[] getCourtVenues(String regionId) {
@@ -81,31 +76,27 @@ public class LocationService {
                 regionId,
                 "Y");
             if (CollectionUtils.isEmpty(list)) {
-                return null;
+                return new HearingVenue[0];
             }
-            HearingVenue[] hearingVenues = new HearingVenue[list.size()];
-            for (int i = 0; i < list.size(); i++) {
-                hearingVenues[i] = list.get(i);
-            }
-            return hearingVenues;
+            return list.toArray(new HearingVenue[0]);
         } catch (FeignException exception) {
             log.error("Unable to get Hearing venue data from reference data with exception {}",
                 exception.getMessage());
         }
 
-        return null;
+        return new HearingVenue[0];
     }
 
     private DynamicList populateRegionDynamicList(Region... regions) {
         List<String> regionList = Objects.nonNull(regions)
-            ? Arrays.asList(regions).stream().map(v -> v.getRegionId() + HYPHEN + v.getDescription()).collect(Collectors.toList())
+            ? Arrays.stream(regions).map(v -> v.getRegionId() + HYPHEN + v.getDescription()).toList()
             : new ArrayList<>();
 
         List<DynamicListElement> regionDynamicList = regionList
             .stream()
             .sorted()
             .map(region -> DynamicListElement.builder().label(region).code(UUID.randomUUID()).build())
-            .collect(Collectors.toList());
+            .toList();
 
         return DynamicList
             .builder()
@@ -115,14 +106,14 @@ public class LocationService {
 
     private DynamicList populateVenueDynamicList(HearingVenue... hearingVenues) {
         List<String> venueList = Objects.nonNull(hearingVenues)
-            ? Arrays.asList(hearingVenues).stream().map(v -> v.getCourtName() + HYPHEN + v.getCourtAddress()).collect(Collectors.toList())
+            ? Arrays.stream(hearingVenues).map(v -> v.getCourtName() + HYPHEN + v.getCourtAddress()).toList()
             : new ArrayList<>();
 
         List<DynamicListElement> hearingVenueList = venueList
             .stream()
             .sorted()
             .map(venue -> DynamicListElement.builder().label(venue).code(UUID.randomUUID()).build())
-            .collect(Collectors.toList());
+            .toList();
 
         return DynamicList
             .builder()
